--- a/app/package.json
+++ b/app/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "ts-node-dev server.ts",
     "build": "next build ./src",
-    "start": "NODE_ENV=production ts-node server.ts",
+    "serve": "NODE_ENV=production ts-node server.ts",
     "lint": "eslint --fix . || prettier --write ."
   },
   "keywords": [],
