--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint --fix . || prettier --write .",
-    "dev": "cross-env NODE_ENV=development ts-node-dev --watch ./src www.ts",
+    "dev": "cross-env NODE_ENV=development ts-node-dev --watch ./src www.ts --project tsconfig.json",
     "serve": "cross-env NODE_ENV=production ts-node --files www.ts --project tsconfig.json"
   },
   "keywords": [],
@@ -13,18 +13,23 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.9",
+    "@types/express-session": "^1.17.3",
     "@types/mongoose": "^5.10.2",
+    "@types/passport": "^1.0.4",
+    "argon2": "^0.27.0",
     "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.5",
     "cross-env": "^7.0.3",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "express-validator": "^6.8.0",
     "helmet": "^4.2.0",
     "husky": "^4.3.5",
     "lint-staged": "^10.5.3",
     "mongoose": "^5.11.5",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.0.0",
