--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/elliptic": "^6.4.12",
     "@types/express": "^4.17.9",
     "@types/express-session": "^1.17.3",
     "@types/mongoose": "^5.10.2",
@@ -20,6 +21,7 @@
     "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.5",
     "cross-env": "^7.0.3",
+    "elliptic": "^6.5.3",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "express-validator": "^6.8.0",
