--- a/server/package.json
+++ b/server/package.json
@@ -16,30 +16,35 @@
     "@types/express": "^4.17.9",
     "@types/express-session": "^1.17.3",
     "@types/mongoose": "^5.10.2",
+    "@types/node": "^15.12.4",
     "@types/passport": "^1.0.4",
+    "@types/validator": "^13.1.4",
     "argon2": "^0.27.0",
-    "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.5",
     "cross-env": "^7.0.3",
     "elliptic": "^6.5.3",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
-    "express-validator": "^6.8.0",
     "helmet": "^4.2.0",
     "husky": "^4.3.5",
     "lint-staged": "^10.5.3",
-    "mongoose": "^5.11.5",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "pg": "^8.6.0",
+    "pg-hstore": "^2.3.4",
     "prettier": "^2.2.1",
-    "ts-node": "^9.1.1",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.6.2",
+    "sequelize-typescript": "^2.1.0",
+    "ts-node": "^10.0.0",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.1.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
-    "eslint": "^7.15.0"
+    "eslint": "^7.15.0",
+    "sequelize-cli": "^6.2.0"
   }
 }
