Change database to postgres

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,2 +1,6 @@
-MONGO_HOST=mongodb://localhost:27017/vote
+DB_USERNAME=postgres
+DB_PASSWORD=
+DB_NAME=poll
+DB_HOSTNAME=localhost
+DB_PORT=5432
 SESSION_SECRET=foo
