--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "@types/passport": "^1.0.4",
     "@types/validator": "^13.1.4",
     "argon2": "^0.27.0",
+    "connect-session-sequelize": "^7.1.1",
     "cookie-parser": "^1.4.5",
     "cross-env": "^7.0.3",
     "elliptic": "^6.5.3",
