--- a/server/package.json
+++ b/server/package.json
@@ -18,19 +18,25 @@
     "@types/mongoose": "^5.10.2",
     "@types/node": "^15.12.4",
     "@types/passport": "^1.0.4",
+    "@types/passport-jwt": "^3.0.5",
     "@types/validator": "^13.1.4",
     "argon2": "^0.27.0",
     "connect-session-sequelize": "^7.1.1",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
+    "dotenv": "^10.0.0",
     "elliptic": "^6.5.3",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "helmet": "^4.2.0",
+    "http-status": "^1.5.0",
     "husky": "^4.3.5",
+    "joi": "^17.4.0",
     "lint-staged": "^10.5.3",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.4",
@@ -40,12 +46,15 @@
     "sequelize-typescript": "^2.1.0",
     "ts-node": "^10.0.0",
     "ts-node-dev": "^1.0.0",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "winston": "^3.3.3",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
     "eslint": "^7.15.0",
+    "eslint-plugin-import": "^2.23.4",
     "sequelize-cli": "^6.2.0"
   }
 }
