--- a/server/.sequelizerc
+++ b/server/.sequelizerc
@@ -6,7 +6,7 @@ const path = require('path');
 
 module.exports = {
   'config': path.resolve('config', 'database.js'),
-  'models-path': path.resolve('src/db', 'models'),
+  'models-path': path.resolve(__dirname, 'src/db/models'),
   'seeders-path': path.resolve('src/db', 'seeders'),
   'migrations-path': path.resolve('src/db', 'migrations')
 };
