--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "@types/elliptic": "^6.4.12",
     "@types/express": "^4.17.9",
     "@types/express-session": "^1.17.3",
+    "@types/lodash": "^4.14.170",
     "@types/node": "^15.12.4",
     "@types/passport": "^1.0.4",
     "@types/passport-jwt": "^3.0.5",
@@ -33,6 +34,7 @@
     "husky": "^4.3.5",
     "joi": "^17.4.0",
     "lint-staged": "^10.5.3",
+    "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
