--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/elliptic": "^6.4.12",
     "@types/express": "^4.17.9",
     "@types/express-session": "^1.17.3",
@@ -21,6 +22,7 @@
     "@types/passport-jwt": "^3.0.5",
     "@types/validator": "^13.1.4",
     "argon2": "^0.27.0",
+    "axios": "^0.21.1",
     "connect-session-sequelize": "^7.1.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
