--- a/server/package.json
+++ b/server/package.json
@@ -18,8 +18,6 @@
     "@types/express-session": "^1.17.3",
     "@types/lodash": "^4.14.170",
     "@types/node": "^15.12.4",
-    "@types/passport": "^1.0.4",
-    "@types/passport-jwt": "^3.0.5",
     "@types/validator": "^13.1.4",
     "argon2": "^0.27.0",
     "axios": "^0.21.1",
@@ -35,11 +33,10 @@
     "http-status": "^1.5.0",
     "husky": "^4.3.5",
     "joi": "^17.4.0",
+    "jsonwebtoken": "^8.5.1",
     "lint-staged": "^10.5.3",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
-    "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.4",
